tests/errors/semantic/non_blocking/INCOMPATIBLE_TYPES_IN_ASSIGNMENT_4.py
# pylint: disable=missing-function-docstring, missing-module-docstring

a : list[int,...]
a = (1,2,3)
